Attempt to add css postprocessing

--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11tyrocks/eleventy-plugin-lightningcss": "^1.1.2",
+    "browserlist": "^1.0.1",
+    "lightningcss": "^1.22.0",
     "toml": "^3.0.0"
-  }
+  },
+  "browserlist": [
+    "last 12 Chrome versions",
+    "last 12 Firefox versions",
+    "last 12 Edge versions",
+    "Safari >= 15",
+    "Firefox ESR"
+  ]
 }
