package json tweaks eleventy config tweaks

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "2.0.1",
-    "browserlist": "1.0.1",
+    "browserslist": "1.0.1",
     "lightningcss": "1.22.0",
     "toml": "3.0.0"
   },
